# cek

./: Cargo.toml  Makefile  NRFC-0.md  NRFC.md  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs
